--- a/repositorio8/views/partials/navbar.jade
+++ b/repositorio8/views/partials/navbar.jade
@@ -6,10 +6,10 @@ nav.navbar.navbar-default
 				span.icon-bar
 				span.icon-bar
 				span.icon-bar
-			a.navbar-brand(href="/messages")="chat"
+			a.navbar-brand(href="/messages")=""
 		div#navbar.navbar-collapse.collapse
 			ul.nav.navbar-nav
 				li(class=(active == "chat" ? "active" : ""))
-					a(href="/messages")="chat"
+					a(href="/messages")=""
 				li(class=(active == "historial" ? "active" : ""))
 					a(href="/messages/historial")="historial"
